add button and disk part

--- a/src/Configurator/App.axaml
+++ b/src/Configurator/App.axaml
@@ -11,7 +11,7 @@
     </Application.DataTemplates>
   
     <Application.Styles>
-        <themes:MaterialTheme BaseTheme="Dark" PrimaryColor="Purple" SecondaryColor="Lime" />
+        <themes:MaterialTheme BaseTheme="Dark" PrimaryColor="Blue" SecondaryColor="Lime" />
     </Application.Styles>
              
 </Application>
